[package]
name = "rust-lcd"
version = "0.1.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
edition = "2018"
description = "Toggle the LCD panel backlight."
license = "MIT"
readme = "README.md"
repository = "https://github.com/FedericoStra/rust-lcd"
# homepage = "..."
# documentation = "..."
keywords = ["lcd", "backlight", "power", "light"]
categories = ["command-line-utilities", "os"]

[dependencies]
